# desen

./: Cargo.toml  build.rs
examples/: foo.rs
shaders/: shader.wgsl
src/: app.rs  frame.rs  lib.rs  state.rs  texture.rs  util.rs  vertex.rs
src/color/: mod.rs
src/frame/: circle.rs  ellipse.rs  line.rs  mod.rs  rect.rs  texture.rs
src/render/: gpu.rs  mod.rs  texture.rs
src/render/shaders/: main.wgsl
src/render/text/: atlas.rs  glyph.rs  mod.rs
src/shaders/: main.wgsl  mod.rs
src/stage/: clip.rs  color.rs  mod.rs  path.rs  sense.rs
src/stage/builders/: image.rs  mod.rs
src/state/: data.rs  mod.rs  texture.rs  windowed.rs
