[package]
name = "desen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
html-canvas = ["dep:web-sys"]

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
futures = "0.3.28"
lyon = "1.0.1"
wgpu = { version = "0.17", features = ["webgl"] }
# wgpu = "0.17.0"
winit = "0.28.6"
nalgebra = "0.32.3"
anyhow = "1.0.75"
image = "0.24.7"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
], optional = true }
