[package]
name = "desen"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.3", features = ["bytemuck"] }
winit = "0.30.11"
wgpu = "25.0.2"
itertools = "0.14.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
slotmap = "1.0.7"
spin_sleep = "1.3.1"
image = "0.25.6"
pollster = "0.4.0"
bon = "3.6.3"
cosmic-text = "0.14.2"
etagere = "0.2.15"
lru = "0.14.0"
palette = "0.7.6"
lyon = "1.0.1"
# geo-clipper = "0.9.0"
# geo-types = "0.7.16"
# lyon = "1.0.1"

[build-dependencies]
wgsl-grease = { git = "https://github.com/OnyxUI/wgsl-grease" }

[dev-dependencies]
dioxus-devtools = "=0.7.0-alpha.1"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
